@@ -20,13 +20,13 @@
       	<ulink url="http://wiki.tcl.tk">Tcl Wiki</ulink>
       </para>
       <note>
-	The Calendar package uses Tcl <command>dict</command> command to manage markup 
-	information. Hence either Tcl8.5 or Tcl8.4 with 
-	<ulink url="http://wiki.tcl.tk/5042">package dict</ulink> are required.   
+        The Calendar package uses Tcl <command>dict</command> command to manage markup 
+        information. Hence either Tcl8.5 or Tcl8.4 with 
+        <ulink url="http://wiki.tcl.tk/5042">package dict</ulink> are required.   
       </note>
    </section>
    <refentry id="calendar">
-   	<refnamediv>
+   	    <refnamediv>
 			<refname>Calendar</refname>
 			<refpurpose>Utility class the builds and prints a calendar table</refpurpose>
 		</refnamediv>
