@@ -1,0 +1,33 @@
+<section id="entities">
+    <title>Entities Package</title>
+    <section>
+        <title>Introduction</title>
+        <para>
+
+        </para>
+
+    </section>
+    <refentry id="entities">
+        <refnamediv>
+            <refname>Entities</refname>
+            <refpurpose></refpurpose>
+        </refnamediv>
+        <refsynopsisdiv>
+            <cmdsynopsis>
+                <command></command>
+                <arg choice="plain"><replaceable></replaceable></arg>
+            </cmdsynopsis>
+        </refsynopsisdiv>
+        <refsect1>
+            <title></title>
+            <para>
+
+            </para>
+        </refsect1>
+        <refsect1>
+            <variablelist>
+
+            </variablelist>
+        </refsect1>
+    </refentry>
+</section>
