@@ -7,7 +7,6 @@
 # a script that loads the command.
 
 set auto_index(::rivet::html) [list source [file join $dir html.tcl]]
-set auto_index(::rivet::lassign) [list source [file join $dir lassign.tcl]]
 set auto_index(::rivet::random) [list source [file join $dir random.tcl]]
 set auto_index(::rivet::rivet_command_document) [list source [file join $dir rivet_command_document.tcl]]
 set auto_index(::rivet::putsnnl) [list source [file join $dir putsnnl.tcl]]
@@ -26,3 +25,4 @@ set auto_index(::rivet::wrap) [list source [file join $dir wrap.tcl]]
 set auto_index(::rivet::wrapline) [list source [file join $dir wrap.tcl]]
 set auto_index(::rivet::parray_table) [list source [file join $dir parray_table.tcl]]
 set auto_index(::rivet::load_cookies) [list source [file join $dir load_cookies.tcl]]
+set auto_index(::rivet::http_accept) [list source [file join $dir http_accept.tcl]]
